updated tutorial and logo

--- a/scripts/nani/analysis_db.ipynb
+++ b/scripts/nani/analysis_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`scores_csvs` is the list of screening csv that were outputted from `screen_nani.py`. <br>\n",
+    "The output of this notebook will also be the same directory as the input csvs."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +31,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "remember to remove the row with `None,None`"
+    "##### Potential Errors\n",
+    "- Please remember to remove the row with `None,None` in the screening csv if there is an error.\n",
+    "- Another reason for error is if there are one or less optimum 2<sup>nd</sup> derivative number of clusters. <br>\n",
+    "    - If there are one optimum 2nd derivative number of clusters, comment out line #$17, 23, 45$. <br>\n",
+    "    - If there are no optimum 2nd derivative number of clusters, comment out the above lines and line #$16, 22, 44$. <br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
