--- a/scripts/nani/analysis_db.ipynb
+++ b/scripts/nani/analysis_db.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cluster Analysis using the Davies Bouldin Index"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
