updated documentation for alignment

--- a/scripts/inputs/preprocessing.ipynb
+++ b/scripts/inputs/preprocessing.ipynb
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\le.chen\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "C:\\Users\\lexin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -47,6 +47,7 @@
     "#### Inputs\n",
     "* `input_top` is the path to the topology file. Check [here](https://userguide.mdanalysis.org/1.0.0/formats/index.html) for all accepted formats.\n",
     "* `input_traj` is the path to the trajectory file. Check [here](https://userguide.mdanalysis.org/1.0.0/formats/index.html) for all accepted formats.\n",
+    "    * **Note**: The trajectory file should be already aligned and centered beforehand if needed!\n",
     "* `output_name` is the name of the output file. The output file will be saved as `{output_name}.npy` for faster loading in the future.\n",
     "* `atomSelection` is the atom selection used for clustering that must be compatible with the [MDAnalysis Atom Selections Language](https://userguide.mdanalysis.org/stable/selections.html).\n",
     "\n",
@@ -63,9 +64,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\le.chen\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\MDAnalysis\\topology\\PDBParser.py:331: UserWarning: Element information is missing, elements attribute will not be populated. If needed these can be guessed using MDAnalysis.topology.guessers.\n",
+      "C:\\Users\\lexin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\MDAnalysis\\topology\\PDBParser.py:328: UserWarning: Element information is missing, elements attribute will not be populated. If needed these can be guessed using MDAnalysis.topology.guessers.\n",
       "  warnings.warn(\"Element information is missing, elements attribute \"\n",
-      "C:\\Users\\le.chen\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\MDAnalysis\\coordinates\\DCD.py:165: DeprecationWarning: DCDReader currently makes independent timesteps by copying self.ts while other readers update self.ts inplace. This behavior will be changed in 3.0 to be the same as other readers. Read more at https://github.com/MDAnalysis/mdanalysis/issues/3889 to learn if this change in behavior might affect you.\n",
+      "C:\\Users\\lexin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\MDAnalysis\\coordinates\\DCD.py:165: DeprecationWarning: DCDReader currently makes independent timesteps by copying self.ts while other readers update self.ts inplace. This behavior will be changed in 3.0 to be the same as other readers. Read more at https://github.com/MDAnalysis/mdanalysis/issues/3889 to learn if this change in behavior might affect you.\n",
       "  warnings.warn(\"DCDReader currently makes independent timesteps\"\n"
      ]
     },
@@ -93,11 +94,7 @@
    "metadata": {},
    "source": [
     "#### Aligning the trajectory\n",
-    "* `N_atom` is the number of atoms in your atom selection. Printed in output of the previous cell.\n",
-    "* `align_method` is the method used to align the trajectory (*optional*). Details about the alignment [here](https://pubs.acs.org/doi/full/10.1021/acs.jctc.1c01290).\n",
-    "    * `None` for no alignment. **(DEFAULT)**\n",
-    "    * `uni` for Uniform alignment.\n",
-    "    * `kron` for Kronecker alignment."
+    "* `N_atom` is the number of atoms in your atom selection. Printed in output of the previous cell."
    ]
   },
   {
@@ -107,9 +104,8 @@
    "outputs": [],
    "source": [
     "N_atoms = 50 \n",
-    "align_method = None\n",
     "\n",
-    "aligned_traj = align_traj(traj_numpy, N_atoms, align_method)"
+    "aligned_traj = align_traj(traj_numpy, N_atoms, align_method=None)"
    ]
   },
   {
