remove alignment erase confusion

--- a/scripts/inputs/preprocessing.ipynb
+++ b/scripts/inputs/preprocessing.ipynb
@@ -20,18 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lexin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import sys\n",
@@ -57,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -93,25 +84,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Aligning the trajectory\n",
-    "* `N_atom` is the number of atoms in your atom selection. Printed in output of the previous cell."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N_atoms = 50 \n",
-    "\n",
-    "aligned_traj = align_traj(traj_numpy, N_atoms, align_method=None)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Outputs\n",
     "The output is a numpy array of shape (n_frames, n_atoms $\\times$ 3)."
    ]
@@ -123,7 +95,7 @@
    "outputs": [],
    "source": [
     "output_name = output_base_name + '.npy'\n",
-    "np.save(output_name, aligned_traj)"
+    "np.save(output_name, traj_numpy)"
    ]
   }
  ],
