--- a/scripts/inputs/preprocessing.ipynb
+++ b/scripts/inputs/preprocessing.ipynb
@@ -20,15 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mykah/miniconda3/envs/onepiece/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import sys\n",
     "sys.path.insert(0, '../../')\n",
-    "from src.inputs.preprocess import gen_traj_numpy\n",
-    "from src.tools.bts import align_traj"
+    "from mdance.inputs.preprocess import gen_traj_numpy\n",
+    "from mdance.tools.bts import align_traj"
    ]
   },
   {
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
