--- a/scripts/inputs/preprocessing.ipynb
+++ b/scripts/inputs/preprocessing.ipynb
@@ -27,7 +27,8 @@
     "import numpy as np\n",
     "import sys\n",
     "sys.path.insert(0, '../../')\n",
-    "from src.inputs.preprocess import gen_traj_numpy"
+    "from src.inputs.preprocess import gen_traj_numpy\n",
+    "from src.tools.bts import align_traj"
    ]
   },
   {
