changed all naming to match new directory for data

--- a/scripts/inputs/preprocessing.ipynb
+++ b/scripts/inputs/preprocessing.ipynb
@@ -78,9 +78,9 @@
     }
    ],
    "source": [
-    "input_top = '../../examples/md/aligned_tau.pdb'\n",
-    "input_traj = '../../examples/md/aligned_1000_tau.dcd'\n",
-    "output_base_name = '../../examples/md/backbone'\n",
+    "input_top = '../../data/md/aligned_tau.pdb'\n",
+    "input_traj = '../../data/md/aligned_1000_tau.dcd'\n",
+    "output_base_name = '../../data/md/backbone'\n",
     "atomSelection = 'resid 3 to 12 and name N CA C O H'\n",
     "\n",
     "traj_numpy = gen_traj_numpy(input_top, input_traj, atomSelection)"
