--- a/scripts/outputs/postprocessing.ipynb
+++ b/scripts/outputs/postprocessing.ipynb
@@ -68,8 +68,8 @@
     }
    ],
    "source": [
-    "input_top = '../../examples/md/aligned_tau.pdb'\n",
-    "input_traj = '../../examples/md/aligned_1000_tau.dcd'\n",
+    "input_top = '../../data/md/aligned_tau.pdb'\n",
+    "input_traj = '../../data/md/aligned_1000_tau.dcd'\n",
     "\n",
     "u = mda.Universe(input_top, input_traj)\n",
     "print(f'Number of atoms in the trajectory: {u.atoms.n_atoms}')"
