--- a/scripts/inputs/preprocessing.ipynb
+++ b/scripts/inputs/preprocessing.ipynb
@@ -13,9 +13,7 @@
    "source": [
     "#### Imports\n",
     "* [numpy](https://numpy.org/) for manipulating and saving arrays.\n",
-    "* `gen_traj_numpy` for using the [MDAnalysis](https://www.mdanalysis.org/) library to read the trajectories and save them as numpy arrays.\n",
-    "* `normalize_files` for normalizing the trajectories\n",
-    "* `align_traj` for aligning the trajectories"
+    "* `gen_traj_numpy` for using the [MDAnalysis](https://www.mdanalysis.org/) library to read the trajectories and save them as numpy arrays."
    ]
   },
   {
@@ -34,7 +32,9 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from mdance.inputs.preprocess import gen_traj_numpy"
+    "\n",
+    "from mdance.inputs.preprocess import gen_traj_numpy\n",
+    "from mdance import data"
    ]
   },
   {
@@ -44,12 +44,11 @@
     "#### Inputs\n",
     "* `input_top` is the path to the topology file. Check [here](https://userguide.mdanalysis.org/1.0.0/formats/index.html) for all accepted formats.\n",
     "* `input_traj` is the path to the trajectory file. Check [here](https://userguide.mdanalysis.org/1.0.0/formats/index.html) for all accepted formats.\n",
-    "    * **Note**: The trajectory file should be already aligned and centered beforehand if needed!\n",
+    "    * **The trajectory file should be aligned and centered beforehand if needed!**\n",
     "* `output_name` is the name of the output file. The output file will be saved as `{output_name}.npy` for faster loading in the future.\n",
     "* `atomSelection` is the atom selection used for clustering that must be compatible with the [MDAnalysis Atom Selections Language](https://userguide.mdanalysis.org/stable/selections.html).\n",
     "\n",
-    "`gen_traj_numpy` will convert the trajectory to a numpy array with the shape (n_frames, n_atoms $\\times$ 3) for comparison purposes.\n",
-    "`normalize_file` will normalize trajectory between $[0, 1]$ to be compatible with extended similarity indices."
+    "`gen_traj_numpy` will convert the trajectory to a numpy array with the shape (n_frames, n_atoms $\\times$ 3) for comparison purposes."
    ]
   },
   {
@@ -78,9 +77,9 @@
     }
    ],
    "source": [
-    "input_top = '../../data/md/aligned_tau.pdb'\n",
-    "input_traj = '../../data/md/aligned_1000_tau.dcd'\n",
-    "output_base_name = '../../data/md/backbone'\n",
+    "input_top = data.top\n",
+    "input_traj = data.traj\n",
+    "output_base_name = 'backbone'\n",
     "atomSelection = 'resid 3 to 12 and name N CA C O H'\n",
     "\n",
     "traj_numpy = gen_traj_numpy(input_top, input_traj, atomSelection)"
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
