--- a/scripts/outputs/postprocessing.ipynb
+++ b/scripts/outputs/postprocessing.ipynb
@@ -25,14 +25,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\le.chen\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\aestr\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
    "source": [
     "import MDAnalysis as mda\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "from mdance import data"
    ]
   },
   {
@@ -60,16 +62,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\le.chen\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\MDAnalysis\\topology\\PDBParser.py:331: UserWarning: Element information is missing, elements attribute will not be populated. If needed these can be guessed using MDAnalysis.topology.guessers.\n",
+      "c:\\Users\\aestr\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\MDAnalysis\\topology\\PDBParser.py:331: UserWarning: Element information is missing, elements attribute will not be populated. If needed these can be guessed using MDAnalysis.topology.guessers.\n",
       "  warnings.warn(\"Element information is missing, elements attribute \"\n",
-      "C:\\Users\\le.chen\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\MDAnalysis\\coordinates\\DCD.py:165: DeprecationWarning: DCDReader currently makes independent timesteps by copying self.ts while other readers update self.ts inplace. This behavior will be changed in 3.0 to be the same as other readers. Read more at https://github.com/MDAnalysis/mdanalysis/issues/3889 to learn if this change in behavior might affect you.\n",
+      "c:\\Users\\aestr\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\MDAnalysis\\coordinates\\DCD.py:165: DeprecationWarning: DCDReader currently makes independent timesteps by copying self.ts while other readers update self.ts inplace. This behavior will be changed in 3.0 to be the same as other readers. Read more at https://github.com/MDAnalysis/mdanalysis/issues/3889 to learn if this change in behavior might affect you.\n",
       "  warnings.warn(\"DCDReader currently makes independent timesteps\"\n"
      ]
     }
    ],
    "source": [
-    "input_top = '../../data/md/aligned_tau.pdb'\n",
-    "input_traj = '../../data/md/aligned_1000_tau.dcd'\n",
+    "input_top = data.top\n",
+    "input_traj = data.traj\n",
     "\n",
     "u = mda.Universe(input_top, input_traj)\n",
     "print(f'Number of atoms in the trajectory: {u.atoms.n_atoms}')"
@@ -102,7 +104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\le.chen\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\MDAnalysis\\coordinates\\DCD.py:448: UserWarning: No dimensions set for current frame, zeroed unitcell will be written\n",
+      "c:\\Users\\aestr\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\MDAnalysis\\coordinates\\DCD.py:463: UserWarning: No dimensions set for current frame, zeroed unitcell will be written\n",
       "  warnings.warn(wmsg)\n"
      ]
     }
@@ -138,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
