feat: incorporate more input file types to colab nb

--- a/tutorials/MDANCE.ipynb
+++ b/tutorials/MDANCE.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -11,7 +12,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -78,21 +80,25 @@
         "#@markdown **Before to start, don't forget to upload your topology and trajectory here at Google Colab.**\n",
         "\n",
         "\n",
-        "#@markdown Enter the path for the trajectory file (e.g., protG_short.dcd):\n",
-        "trajectory_file =  'TSLP_TSLPR_replica1.dcd' #@param {type:\"string\"}\n",
-        "#@markdown Enter the path for the topology file (e.g., protG_short.pdb):\n",
+        "#@markdown Enter the path for the trajectory file (e.g., protG_short):\n",
+        "trajectory_file =  'protG_short' #@param {type:\"string\"}\n",
+        "input_format_trajectory = \"dcd\" #@param [\"pdb\", \"dcd\", \"nc\", \"xtc\", \"gro\", \"trr\"]\n",
         "\n",
-        "topology_file = 'TSLP_TSLPR.pdb' #@param {type:\"string\"}\n",
+        "\n",
+        "#@markdown Enter the path for the topology file (e.g., protG_short):\n",
+        "\n",
+        "topology_file = 'protG_short' #@param {type:\"string\"}\n",
+        "input_format_topology = \"pdb\" #@param [\"pdb\", \"gro\", \"top\", \"tpr\", \"prmtop\", \"parm7\", \"psf\"]\n",
+        "\n",
         "\n",
         "#@markdown The atom selection used for clustering that must be compatible with the [MDAnalysis Atom Selections Language](https://userguide.mdanalysis.org/stable/selections.html).\n",
         "\n",
         "\n",
         "selection = 'name CA' #@param {type:\"string\"}\n",
-        "output_file_name = 'TSLP_TSLPR' #@param {type:\"string\"}\n",
+        "output_file_name = 'protG_short' #@param {type:\"string\"}\n",
         "\n",
-        "\n",
-        "input_top = topology_file\n",
-        "input_traj = trajectory_file\n",
+        "input_traj = f'{trajectory_file}.{input_format_trajectory}'\n",
+        "input_top = f'{topology_file}.{input_format_topology}'\n",
         "output_base_name = output_file_name\n",
         "atomSelection = selection\n",
         "\n",
@@ -106,7 +112,7 @@
         },
         "cellView": "form",
         "id": "qTHPje8DYg1C",
-        "outputId": "dfa28220-c88c-4952-b3a2-eda5027ecb2f"
+        "outputId": "43a29b12-bfff-4fbd-b1ca-410637b5262d"
       },
       "execution_count": null,
       "outputs": [
@@ -315,7 +321,7 @@
         },
         "cellView": "form",
         "id": "LIlFOllyZzBL",
-        "outputId": "3d7f1c56-6e5d-4638-d5f9-35884af5af07"
+        "outputId": "ac7c7eb1-e7f2-4f74-e2f1-e3465bcd7622"
       },
       "execution_count": null,
       "outputs": [
@@ -441,11 +447,10 @@
         "\n",
         "from mdance import data\n",
         "\n",
-        "output_format = \"dcd\" #@param [\"pdb\", \"dcd\"]\n",
+        "output_format = \"dcd\" #@param [\"dcd\", \"nc\", \"xtc\", \"gro\", \"trr\"]\n",
         "\n",
-        "\n",
-        "input_top = topology_file\n",
-        "input_traj = trajectory_file\n",
+        "input_traj = f'{trajectory_file}.{input_format_trajectory}'\n",
+        "input_top = f'{topology_file}.{input_format_topology}'\n",
         "\n",
         "u = mda.Universe(input_top, input_traj)\n",
         "print(f'Number of atoms in the trajectory: {u.atoms.n_atoms}')\n",
@@ -469,7 +474,7 @@
         },
         "cellView": "form",
         "id": "ZlAcsZm9aqMa",
-        "outputId": "ddd11e29-f5af-4d59-98a2-072296206be1"
+        "outputId": "49ac6f75-8b59-461c-8a77-b37102866150"
       },
       "execution_count": null,
       "outputs": [
@@ -478,14 +483,6 @@
           "name": "stdout",
           "text": [
             "Number of atoms in the trajectory: 5162\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/MDAnalysis/coordinates/DCD.py:165: DeprecationWarning: DCDReader currently makes independent timesteps by copying self.ts while other readers update self.ts inplace. This behavior will be changed in 3.0 to be the same as other readers. Read more at https://github.com/MDAnalysis/mdanalysis/issues/3889 to learn if this change in behavior might affect you.\n",
-            "  warnings.warn(\"DCDReader currently makes independent timesteps\"\n"
           ]
         }
       ]
@@ -516,7 +513,7 @@
         },
         "cellView": "form",
         "id": "7f3xpECKu_MH",
-        "outputId": "49485ad5-1f49-4226-e241-6fe61d5d98b2"
+        "outputId": "6f55d4d8-aafb-48d2-ef93-62ff4f7fde5f"
       },
       "execution_count": null,
       "outputs": [
@@ -579,7 +576,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_eef16854-1f6f-4697-8403-506dd8312160\", \"results_MDANCE_TSLP_TSLPR.zip\", 10905150)"
+              "download(\"download_c586ab91-5893-4d4a-9c9b-ac26bf2d8fdf\", \"results_MDANCE_TSLP_TSLPR_test1.zip\", 67977535)"
             ]
           },
           "metadata": {}
