--- a/tutorials/SHINE.ipynb
+++ b/tutorials/SHINE.ipynb
@@ -4,10 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SHINE\n",
+    "<p align=\"center\">\n",
+    "<img src=\"../docs/_static/SHINE.PNG\" width=\"180\" height=auto align=\"center\"></a></p>\n",
+    "\n",
+    "<h3 align=\"center\">\n",
+    "    <p><b>Pathway Analysis SHINE!</b></p>\n",
+    "    </h3>\n",
     "\n",
     "## Overview\n",
-    "Sampling Hierarchical Intrinsic N-ary Ensembles (SHINE) is a hierarchical clustering tool for pathway analysis. This can be particularly useful if you want to identical the dominant pathway(s) of your enhanced sampling simulations."
+    "Sampling Hierarchical Intrinsic *N*-ary Ensembles (SHINE) is a hierarchical clustering tool for pathway analysis. This can be particularly useful if you want to identical the dominant pathway(s) of your enhanced sampling simulations."
    ]
   },
   {
