fix: update SHINE tutorial image link to use raw GitHub URL

--- a/tutorials/SHINE.ipynb
+++ b/tutorials/SHINE.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<p align=\"center\">\n",
-    "<img src=\"../docs/_static/SHINE.PNG\" width=\"180\" height=auto align=\"center\"></a></p>\n",
+    "<img src=\"https://raw.githubusercontent.com/mqcomplab/MDANCE/main/docs/_static/SHINE.PNG\" width=\"180\" height=auto align=\"center\"></a></p>\n",
     "\n",
     "<h3 align=\"center\">\n",
     "    <p><b>Pathway Analysis SHINE!</b></p>\n",
