fix: update SHINE parameters to use variable for max clusters in tutorial

--- a/tutorials/SHINE.ipynb
+++ b/tutorials/SHINE.ipynb
@@ -223,7 +223,8 @@
     "# SHINE Parameters\n",
     "sampling = 'diversity'                                      # Sampling scheme {'diversity', 'quota'}\n",
     "frac = 0.5                                                  # Fraction of frames to be sampled\n",
-    "merge_scheme = 'intra'                                      # Merge scheme {'intra', 'semi_sum', 'min'}"
+    "merge_scheme = 'intra'                                      # Merge scheme {'intra', 'semi_sum', 'min'}\n",
+    "t = 2                                                       # This would be max number of clusters requested"
    ]
   },
   {
@@ -241,7 +242,7 @@
     "    frames_all.append((traj, frame))\n",
     "\n",
     "# Run SHINE\n",
-    "mod = Shine(frames_all, 'MSD', N_atoms=1 , t=2, criterion='maxclust', \n",
+    "mod = Shine(frames_all, 'MSD', N_atoms=1 , t=t, criterion='maxclust', \n",
     "            link='ward', merge_scheme=merge_scheme, \n",
     "            sampling='diversity', frac=frac)\n",
     "link, clusters = mod.run()"
