fix: correct CSV file references in analysis notebook

--- a/scripts/divine/analysis_db.ipynb
+++ b/scripts/divine/analysis_db.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`scores_csvs` is the list of screening csv that were outputted from `screen_helm.py`. <br>\n",
+    "`divine_nani_scores.csv` is the list of screening csv that were outputted from `run_divine.py`. <br>\n",
     "The output of this notebook will also be the same directory as the input csvs."
    ]
   },
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores_csvs = ['divine_nani_labels_6.csv']"
+    "scores_csvs = ['divine_nani_scores.csv']"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +59,8 @@
     "    n_clus, db = np.loadtxt(scores_csv, unpack=True, delimiter=',', usecols=(0, 2))\n",
     "\n",
     "    if rows_to_skip > 0:\n",
-    "        n_clus = n_clus[:-rows_to_skip]\n",
-    "        db = db[:-rows_to_skip]\n",
+    "        n_clus = n_clus[:rows_to_skip]\n",
+    "        db = db[:rows_to_skip]\n",
     "    \n",
     "    # Plot the Davies-Bouldin index and the optimal number of clusters\n",
     "    all_indices = np.argsort(db)\n",
